{
    "name": "LookMap",
    "maps": [
        {
            "name": "ViewMap",
            "id": "4dc18fe0-2327-403b-aa48-6bc6a57cdb8e",
            "actions": [
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "638f160e-605e-4928-9a7d-eb19aa488c87",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "118c8721-8797-4784-8a06-49591836e435",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "da8aa3dc-ec1f-4251-9a8d-c3a112d54239",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "59f6519a-90bd-45e2-9522-e02a90547823",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "ScaleVector2(x=0.1,y=0.1)",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c110710-f08b-4a21-8f28-26646ebef9a6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eca80c9f-895d-48a0-ba11-08ef9d429620",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bab4e0ba-5216-4ae5-b784-8e24954e3027",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PauseMap",
            "id": "65cb83d9-43d8-4da9-894b-2b873c4eb16c",
            "actions": [
                {
                    "name": "Unpause",
                    "type": "Button",
                    "id": "0e994fef-4d72-4d99-a400-bb8182f86866",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "918879a6-415a-4f36-b5ee-da5e60ce6ecc",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Unpause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}